# ai-oda

./: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
cmd/api/: main.go  models.go
cmd/worker/: main.go
crewai/: .env.example  pyproject.toml
crewai/src/: __init__.py  agents.py  config.py  crew.py  main.py  tools.py
crewai/src/ai_oda_crewai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: docs.go  swagger.json  swagger.yaml
internal/ai/: generator.go  vision_pipeline.go
internal/bridge/: redis.go
internal/social/: instagram.go  instagram_oauth.go
internal/supabase/: auth_middleware.go  auth_middleware_test.go  client.go  client_integration_test.go  client_test.go
internal/watcher/: watcher.go
migrations/: 01_init_schema.sql  02_add_impact_score_to_media_assets.sql
